# realtime-color-detection

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  realtime_color_detection.py  test_basic.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: tests.yml
docs/: implementation-notes.md
realtime_color_detection/: __init__.py  __main__.py  app.py
tests/: test_core.py
